hoem abot change

--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -6014,7 +6014,7 @@ only screen and (min-width: 768px) and (max-width: 991px) {
 }
 
 .ms-popular__title a {
-  color: var(--clr-bg-4);
+  color: white;
   font-weight: 500;
   font-size: 20px;
   background: linear-gradient(90deg, #de4038 0%, #dea738 100%);
@@ -13063,4 +13063,33 @@ only screen and (min-width: 576px) and (max-width: 767px),
 .wh250 {
   width: 250px;
   height: 250px;
+}
+
+
+/* new css */
+.unfill__btn2 {
+  font-size: 16px;
+  color: var(--clr-common-white);
+  font-weight: var(--bd-fw-medium);
+  background: var(--clr-gradient-3);
+  padding: 6px 16px;
+  align-items: center;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -o-border-radius: 30px;
+  -ms-border-radius: 30px;
+  border-radius: 6px;
+  gap: 10px !important;
+  position: relative;
+  z-index: 5;
+}
+.unfill__btn2:hover{
+  color: white;
+  border: 2px solid white;
+}
+.text-bg{
+  background: linear-gradient(90deg, #de4038 0%, #dea738 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
