--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -2096,12 +2096,12 @@ only screen and (min-width: 576px) and (max-width: 767px),
   display: inline-flex;
 }
 
-/* @media only screen and (min-width: 1801px),
-only screen and (min-width: 1601px) and (max-width: 1800px) {
+@media only screen and (min-width: 1200px),
+only screen and (min-width: 1200px) and (max-width: 1200px) {
   .header__hamburger {
     display: none;
   }
-} */
+}
 
 .sidebar__toggle {
   cursor: pointer;
