--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -12636,12 +12636,12 @@ only screen and (min-width: 576px) and (max-width: 767px),
 
 .ms-footer-social {
   display: flex;
-  gap: 10px 40px;
+  gap: 10px 20px;
 }
 
 .ms-footer-social a {
   font-weight: 500;
-  font-size: 15px;
+  font-size: 20px;
   color: var(--clr-text-5);
   position: relative;
   padding-bottom: 10px;
@@ -12652,12 +12652,12 @@ only screen and (min-width: 576px) and (max-width: 767px),
   position: absolute;
   bottom: 0px;
   left: 0;
-  width: 4px;
-  height: 4px;
-  background: var(--clr-text-5);
-  border-radius: 50%;
-  right: 0;
-  margin: auto;
+  /* width: 4px; */
+  /* height: 4px; */
+  /* background: var(--clr-text-5); */
+  /* border-radius: 50%; */
+  /* right: 0; */
+  /* margin: auto; */
 }
 
 .ms-footer-social a:hover {
