--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -13093,3 +13093,31 @@ only screen and (min-width: 576px) and (max-width: 767px),
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
+.contactInfoLogo {
+  width: 90px !important;
+  height: 90px !important;
+}
+
+.card-bg-black {
+  background-color: #0D0D0D;
+  position: relative;
+  box-sizing: border-box;
+  background-clip: padding-box;
+  border: solid 5px transparent;
+  border-radius: 1em;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5); /* Optional shadow */
+}
+
+.card-bg-black::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: -5px;
+  border-radius: inherit;
+  background: linear-gradient(to right, red, orange);
+}
