--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -13142,3 +13142,10 @@ only screen and (min-width: 576px) and (max-width: 767px),
 .ms-footer-widget ul li a:hover {
   letter-spacing: 0px;
 }
+
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+    .work__area .section__title {
+        font-size: 28px;
+        line-height: 1.3;
+    }
+}
