--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -13166,9 +13166,32 @@ only screen and (min-width: 576px) and (max-width: 767px),
 
 .custome-radius-top {
   border-radius: 12px 12px 0px 0px;
-   /* clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); */
+  /* clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); */
 }
 
 .custome-radius-bottom {
   border-radius: 0px 0px 12px 12px;
+}
+
+.achievement-card {
+  background: #fff;
+  /* box-shadow: linear-gradient(90deg, #ff5a4d 0%, #ffc04d 100%); */
+  /* box-shadow: 3px 3px 8px #ff5a4d; */
+  transition: all 0.3s ease;
+  padding: 2px;
+  height: 100%;
+  border: 2px solid transparent;
+  border-radius: 12px;
+  transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(30deg, #ff5a4d, #ffc04d);
+  /* justify-content: space-between; */
+}
+
+.inner-content {
+  background: #fff8e1;
+  border-radius: 0px 0px 12px 12px;
+  padding: 12px 20px;
+  height: 100%;
 }
