--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -13195,3 +13195,6 @@ only screen and (min-width: 576px) and (max-width: 767px),
   padding: 12px 20px;
   height: 100%;
 }
+.height-200{
+  height: 200px;
+}
