--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -90,7 +90,8 @@
   --clr-text-3: #DDDDDD;
   --clr-text-4: #959595;
   --clr-text-5: #C1C1C1;
-  --clr-text-6: #5EE4C6;
+  /* --clr-text-6: #5EE4C6; */
+  --clr-text-6: #FFF;
   --clr-text-7: #dfa93d;
   --clr-text-8: #e1e1e1;
   --clr-text-9: #F7F7F7;
