--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -13369,3 +13369,7 @@ only screen and (min-width: 576px) and (max-width: 767px),
 .ms-choose-icon {
   font-size: 30px;
 }
+
+.custome-height-30rem {
+  height: 30rem;
+}
