--- a/public/assets/app/css/banner.css
+++ b/public/assets/app/css/banner.css
@@ -359,7 +359,7 @@ body {
 
 .arrows {
     position: absolute;
-    bottom: 10px;
+    bottom: 82px;
     width: 1140px;
     max-width: 90%;
     display: flex;
@@ -416,7 +416,8 @@ body {
     width: 500px;
     height: 300px;
     content: '';
-    background-image: linear-gradient(70deg, #DC422A, blue);
+    background-image: linear-gradient(90deg, #de4038 0%, #dea738 100%);
+    /* background-image: linear-gradient(70deg, #DC422A, blue); */
     position: absolute;
     z-index: -1;
     border-radius: 20% 30% 80% 10%;
@@ -433,101 +434,102 @@ body {
 }
 
 @media screen and (max-width: 767px) {
-  .carousel {
-    height: 100vh;
-  }
+    .carousel {
+        height: 100vh;
+    }
 
-  .carousel .list .item {
-    width: 100%;
-    font-size: 12px;
-  }
+    .carousel .list .item {
+        width: 100%;
+        font-size: 12px;
+    }
 
-  .carousel .list {
-    height: 100%;
-  }
+    .carousel .list {
+        height: 100%;
+    }
 
-  .carousel .list .item img {
-    width: 60%;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+    .carousel .list .item img {
+        width: 60%;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 
-  .carousel .list .item:nth-child(2) .introduce {
-    width: 80%;
-    padding: 20px;
-    background: rgba(255,255,255,0.8);
-    border-radius: 10px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-
-  .carousel .list .item .introduce .des {
-    font-size: 0.9em;
-    line-height: 1.4;
-    height: auto;
-  }
-
-  .carousel .list .item .introduce .seeMore {
-    font-size: 0.8em;
-  }
-
-  .carousel.showDetail .list .item:nth-child(2) .detail {
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    background: #fff;
-    overflow-y: auto;
-    text-align: left;
-    padding: 20px;
-    transform: none;
-  }
+    .carousel .list .item:nth-child(2) .introduce {
+        width: 80%;
+        padding: 20px;
+        background: rgb(255 255 255 / 8%);
+        border-radius: 10px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 
 
-  .carousel.showDetail .list .item:nth-child(2) .detail .des {
-    font-size: 1em;
-    margin-top: 10px;
-  }
+    .carousel .list .item .introduce .des {
+        font-size: 0.9em;
+        line-height: 1.4;
+        height: auto;
+    }
 
-  .carousel.showDetail .list .item:nth-child(2) .detail .specifications {
-    display: block;
-    border-top: 1px solid #ddd;
-    margin-top: 20px;
-  }
+    .carousel .list .item .introduce .seeMore {
+        font-size: 0.8em;
+    }
 
-  .carousel.showDetail .list .item:nth-child(2) .detail .specifications div {
-    width: 100%;
-    margin-bottom: 10px;
-    text-align: left;
-  }
+    .carousel.showDetail .list .item:nth-child(2) .detail {
+        position: fixed;
+        right: 0;
+        top: 0;
+        width: 100vw;
+        height: 100vh;
+        background: #fff;
+        overflow-y: auto;
+        text-align: left;
+        padding: 20px;
+        transform: none;
+    }
 
-  .carousel.showDetail .list .item:nth-child(2) .detail .checkout {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
 
-  .carousel.showDetail .list .item:nth-child(2) .detail .checkout button {
-    width: 100%;
-    margin: 10px 0;
-  }
+    .carousel.showDetail .list .item:nth-child(2) .detail .des {
+        font-size: 1em;
+        margin-top: 10px;
+    }
 
-  #back {
-    bottom: 20px;
-  }
+    .carousel.showDetail .list .item:nth-child(2) .detail .specifications {
+        display: block;
+        border-top: 1px solid #ddd;
+        margin-top: 20px;
+    }
+
+    .carousel.showDetail .list .item:nth-child(2) .detail .specifications div {
+        width: 100%;
+        margin-bottom: 10px;
+        text-align: left;
+    }
+
+    .carousel.showDetail .list .item:nth-child(2) .detail .checkout {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .carousel.showDetail .list .item:nth-child(2) .detail .checkout button {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    #back {
+        bottom: 20px;
+    }
 }
 
 
 .carousel-section {
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
 }
+
 .next-section {
-  height: 100vh;
-  background: #f5f5f5;
-  padding: 100px;
+    height: 100vh;
+    background: #f5f5f5;
+    padding: 100px;
 }
