--- a/public/assets/app/css/banner.css
+++ b/public/assets/app/css/banner.css
@@ -412,6 +412,19 @@ body {
     transition: 1s;
 }
 
+.corousel-section-main::before {
+    content: '';
+    background-image: linear-gradient(90deg, #de4038 0%, #dea738 100%);
+    position: absolute;
+    z-index: -1;
+    border-radius: 20% 30% 80% 10%;
+    filter: blur(150px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-10%, -50%);
+    transition: 1s;
+}
+
 .carousel.showDetail::before {
     transform: translate(-100%, -50%) rotate(90deg);
     filter: blur(130px);
@@ -512,4 +525,9 @@ body {
     height: 100vh;
     background: #f5f5f5;
     padding: 100px;
+}
+
+.carousel .list {
+    width: 100%;
+    max-width: 100vw;
 }
