--- a/public/assets/app/css/banner.css
+++ b/public/assets/app/css/banner.css
@@ -412,9 +412,25 @@ body {
     transition: 1s;
 }
 
-.corousel-section-main::before {
+/* .corousel-section-main::before {
     content: '';
     background-image: linear-gradient(90deg, #de4038 0%, #dea738 100%);
+    position: absolute;
+    z-index: -1;
+    border-radius: 20% 30% 80% 10%;
+    filter: blur(150px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-10%, -50%);
+    transition: 1s;
+} */
+.corousel-section-main::before {
+    content: '';
+    background-image: 
+        url('assets/img/kings img/lion_logo.png'), 
+        linear-gradient(90deg, #de4038 0%, #dea738 100%);
+    background-size: cover;
+    background-position: center;
     position: absolute;
     z-index: -1;
     border-radius: 20% 30% 80% 10%;
