--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -13544,3 +13544,6 @@ only screen and (min-width: 576px) and (max-width: 767px),
   height: 3px;
   bottom: 5px;
 }
+.ms-bg-3{
+  background-color: #0D0D0D;
+}
