--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -2194,8 +2194,9 @@ only screen and (min-width: 1601px) and (max-width: 1800px) {
 }
 
 .section__title {
-  font-size: 35px;
+  /* font-size: 35px; */
   /* font-size: max(2vw, 2.1875rem) !important; */
+  font-size: clamp(1rem, 2vw, 2.1875rem);
   font-weight: var(--bd-fw-sbold);
   line-height: 1.2;
   text-transform: capitalize;
