--- a/public/assets/app/css/main.css
+++ b/public/assets/app/css/main.css
@@ -13623,7 +13623,8 @@ only screen and (min-width: 576px) and (max-width: 767px),
 }
 
 .bg-w-3 {
-  background-color: #E4EEF0;
+  /* background-color: #E4EEF0; */
+  background-color: #f6f6f6;
 }
 
 .bg-w-4 {
